--- a/.net/src/MeuPonto.WebApi/Properties/launchSettings.json
+++ b/.net/src/MeuPonto.WebApi/Properties/launchSettings.json
@@ -1,20 +1,20 @@
 ﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
-    "windowsAuthentication": true,
-    "anonymousAuthentication": false,
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:29466",
-      "sslPort": 44360
+      "applicationUrl": "http://localhost:64247",
+      "sslPort": 44311
     }
   },
   "profiles": {
-    "MeuPontoApi": {
+    "MeuPonto.WebApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7277;http://localhost:5196",
+      "applicationUrl": "https://localhost:7072;http://localhost:5069",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
