--- a/.net/tests/MeuPonto.EntityFrameworkCore.Cosmos.Tests/MeuPonto.EntityFrameworkCore.Cosmos.Tests.csproj
+++ b/.net/tests/MeuPonto.EntityFrameworkCore.Cosmos.Tests/MeuPonto.EntityFrameworkCore.Cosmos.Tests.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\..\src\MeuPonto.EntityFrameworkCore.Cosmos\MeuPonto.EntityFrameworkCore.Cosmos.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Modules\Perfis\" />
+  </ItemGroup>
+
 </Project>
