--- a/.net/tests/MeuPonto.EntityFrameworkCore.Cosmos.Tests/MeuPonto.EntityFrameworkCore.Cosmos.Tests.csproj
+++ b/.net/tests/MeuPonto.EntityFrameworkCore.Cosmos.Tests/MeuPonto.EntityFrameworkCore.Cosmos.Tests.csproj
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <Folder Include="Modules\Perfis\" />
+    <Folder Include="Modules\Pontos\Comprovantes\" />
+    <Folder Include="Modules\Pontos\Folhas\" />
   </ItemGroup>
 
 </Project>
