--- a/.net/tests/MeuPonto.EntityFrameworkCore.Sqlite.Tests/MeuPonto.EntityFrameworkCore.Sqlite.Tests.csproj
+++ b/.net/tests/MeuPonto.EntityFrameworkCore.Sqlite.Tests/MeuPonto.EntityFrameworkCore.Sqlite.Tests.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <Folder Include="Modules\Perfis\" />
+    <Folder Include="Modules\Pontos\Comprovantes\" />
   </ItemGroup>
 
 </Project>
