--- a/specs/MeuPonto.Specs.Desktop/MeuPonto.Specs.Desktop.csproj
+++ b/specs/MeuPonto.Specs.Desktop/MeuPonto.Specs.Desktop.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\.net\src\MeuPonto.EntityFrameworkCore.Sqlite\MeuPonto.EntityFrameworkCore.Sqlite.csproj" />
+    <ProjectReference Include="..\MeuPonto.SystemModel\MeuPonto.SystemModel.csproj" />
   </ItemGroup>
 
   <ItemGroup>
