--- a/specs/MeuPonto.Specs.WebApi/MeuPonto.Specs.WebApi.csproj
+++ b/specs/MeuPonto.Specs.WebApi/MeuPonto.Specs.WebApi.csproj
@@ -17,6 +17,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\.net\src\MeuPonto.WebApi\MeuPonto.WebApi.csproj" />
+    <ProjectReference Include="..\MeuPonto.ConceptualModel\MeuPonto.ConceptualModel.csproj" />
+    <ProjectReference Include="..\MeuPonto.SystemModel\MeuPonto.SystemModel.csproj" />
   </ItemGroup>
 
 </Project>
