--- a/.net/src/MeuPonto.Web/appsettings.json
+++ b/.net/src/MeuPonto.Web/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MeuPonto;Trusted_Connection=True;MultipleActiveResultSets=true",
     "EndpointUri": "",
     "PrimaryKey": ""
   },
