--- a/src/MeuPonto.Web/appsettings.json
+++ b/src/MeuPonto.Web/appsettings.json
@@ -9,7 +9,8 @@
     "Domain": "mardsystemshotmail.onmicrosoft.com",
     "TenantId": "2b30be8b-9f8f-49ef-8355-8be18edb1c4c",
     "ClientId": "53f5c05d-7757-4a37-b6d2-3642b7a04202",
-    "CallbackPath": "/signin-oidc"
+    "CallbackPath": "/signin-oidc",
+    "Scopes": "access_as_user"
   },
   "Logging": {
     "LogLevel": {
