--- a/specs/MeuPonto.Specs/MeuPonto.Specs.csproj
+++ b/specs/MeuPonto.Specs/MeuPonto.Specs.csproj
@@ -35,56 +35,24 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Modules\Perfis\DetalharPerfil.feature.cs">
-      <DependentUpon>DetalharPerfil.feature</DependentUpon>
+    <Compile Update="Modules\Pontos\Comprovantes\BackupComprovantes.feature.cs">
+      <DependentUpon>BackupComprovantes.feature</DependentUpon>
     </Compile>
-    <Compile Update="Modules\Perfis\ExcluirPerfil.feature.cs">
-      <DependentUpon>ExcluirPerfil.feature</DependentUpon>
-    </Compile>
-    <Compile Update="Modules\Perfis\EditarPerfil.feature.cs">
-      <DependentUpon>EditarPerfil.feature</DependentUpon>
-    </Compile>
-    <Compile Update="Modules\Pontos\Folhas\ApurarFolha.feature.cs">
-      <DependentUpon>ApurarFolha.feature</DependentUpon>
-    </Compile>
-    <Compile Update="Modules\Pontos\Comprovantes\GuardarComprovante.feature.cs">
-      <DependentUpon>GuardarComprovante.feature</DependentUpon>
-    </Compile>
-    <Compile Update="Modules\Pontos\MarcarPonto.feature.cs">
-      <DependentUpon>MarcarPonto.feature</DependentUpon>
+    <Compile Update="Modules\Pontos\RegistroPontos.feature.cs">
+      <DependentUpon>RegistroPontos.feature</DependentUpon>
     </Compile>
   </ItemGroup>
 
   <ItemGroup>
-    <SpecFlowFeatureFiles Update="Modules\Perfis\DetalharPerfil.feature">
+    <SpecFlowFeatureFiles Update="Modules\Pontos\Folhas\GestaoFolhas.feature">
       <Visible>$(UsingMicrosoftNETSdk)</Visible>
       <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
     </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="Modules\Perfis\ExcluirPerfil.feature">
+    <SpecFlowFeatureFiles Update="Modules\Pontos\Comprovantes\BackupComprovantes.feature">
       <Visible>$(UsingMicrosoftNETSdk)</Visible>
       <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
     </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="Modules\Perfis\EditarPerfil.feature">
-      <Visible>$(UsingMicrosoftNETSdk)</Visible>
-      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-    </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="Modules\Pontos\Folhas\ApurarFolha.feature">
-      <Visible>$(UsingMicrosoftNETSdk)</Visible>
-      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-    </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="Modules\Pontos\Folhas\FecharFolha.feature">
-      <Visible>$(UsingMicrosoftNETSdk)</Visible>
-      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-    </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="Modules\Pontos\Folhas\AbrirFolha.feature">
-      <Visible>$(UsingMicrosoftNETSdk)</Visible>
-      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-    </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="Modules\Pontos\Comprovantes\GuardarComprovante.feature">
-      <Visible>$(UsingMicrosoftNETSdk)</Visible>
-      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-    </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="Modules\Pontos\MarcarPonto.feature">
+    <SpecFlowFeatureFiles Update="Modules\Pontos\RegistroPontos.feature">
       <Visible>$(UsingMicrosoftNETSdk)</Visible>
       <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
     </SpecFlowFeatureFiles>
