--- a/src/MeuPonto.Web/Properties/launchSettings.json
+++ b/src/MeuPonto.Web/Properties/launchSettings.json
@@ -33,7 +33,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://meuponto.azurewebsites.net;http://meuponto.azurewebsites.net",
+      "applicationUrl": "https://localhost:7278;http://localhost:5019",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production"
       }
