ci: reconfigura appsettings

--- a/src/MeuPonto.Web/appsettings.json
+++ b/src/MeuPonto.Web/appsettings.json
@@ -1,12 +1,18 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MeuPonto;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "EndpointUri": "",
-    "PrimaryKey": ""
   },
   "AzureAd": {
+    "Instance": "https://meuponto.b2clogin.com/",
+    "Domain": "meuponto.onmicrosoft.com",
+    "TenantId": "ec7a0fb4-ff9a-49e7-ae03-8bedd69d79f9",
+    "ClientId": "168681a3-d8c0-4497-8e89-d1f7101a151d",
     "CallbackPath": "/signin-oidc",
-    "Scopes": "access_as_user"
+    "SignedOutCallbackPath": "/signout/B2C_1_susi",
+    "SignUpSignInPolicyId": "B2C_1_SignUpAndSignIn",
+    "EditProfilePolicyId": "B2C_1_Edit_Profile",
+    "ResetPasswordPolicyId": "B2C_1_Reset",
+    "EnablePiiLogging": "true"
   },
   "Logging": {
     "LogLevel": {
