ci: informa app id prod

--- a/src/MeuPonto.Web/appsettings.Development.json
+++ b/src/MeuPonto.Web/appsettings.Development.json
@@ -1,5 +1,8 @@
 {
   "DetailedErrors": true,
+  "AzureAd": {
+    "ClientId": "168681a3-d8c0-4497-8e89-d1f7101a151d"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
