ops: adiciona log do Microsoft.Identity

--- a/src/MeuPonto.Web/appsettings.json
+++ b/src/MeuPonto.Web/appsettings.json
@@ -17,6 +17,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Identity": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
