--- a/src/MeuPonto.Web/MeuPonto.Web.csproj
+++ b/src/MeuPonto.Web/MeuPonto.Web.csproj
@@ -32,11 +32,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Modules\Perfis\Empregadores\Criar.cshtml" />
-    <None Include="Modules\Perfis\Empregadores\Detalhar.cshtml" />
-    <None Include="Modules\Perfis\Empregadores\Editar.cshtml" />
-    <None Include="Modules\Perfis\Empregadores\Excluir.cshtml" />
-    <None Include="Modules\Perfis\Empregadores\Index.cshtml" />
+    <None Include="Modules\Empregadores\Criar.cshtml" />
+    <None Include="Modules\Empregadores\Detalhar.cshtml" />
+    <None Include="Modules\Empregadores\Editar.cshtml" />
+    <None Include="Modules\Empregadores\Excluir.cshtml" />
+    <None Include="Modules\Empregadores\Index.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
