--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,5 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+/src/MeuPonto.Web/appsettings.Production.json
+/src/MeuPonto.Web/appsettings.Staging.json
