task: remove EnablePiiLogging

--- a/src/MeuPonto.Web/appsettings.json
+++ b/src/MeuPonto.Web/appsettings.json
@@ -11,8 +11,7 @@
     "SignedOutCallbackPath": "/signout/B2C_1_susi",
     "SignUpSignInPolicyId": "B2C_1_SignUpAndSignIn",
     "EditProfilePolicyId": "B2C_1_Edit_Profile",
-    "ResetPasswordPolicyId": "B2C_1_Reset",
-    "EnablePiiLogging": "true"
+    "ResetPasswordPolicyId": "B2C_1_Reset"    
   },
   "Logging": {
     "LogLevel": {
