task: atualiza Web App

--- a/src/MeuPonto.Web/appsettings.json
+++ b/src/MeuPonto.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MeuPonto;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MeuPonto;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AzureAd": {
     "Instance": "https://meuponto.b2clogin.com/",
@@ -11,7 +11,8 @@
     "SignedOutCallbackPath": "/signout/B2C_1_susi",
     "SignUpSignInPolicyId": "B2C_1_SignUpAndSignIn",
     "EditProfilePolicyId": "B2C_1_Edit_Profile",
-    "ResetPasswordPolicyId": "B2C_1_Reset"    
+    "ResetPasswordPolicyId": "B2C_1_Reset",
+    "Scopes": "access_as_user"
   },
   "Logging": {
     "LogLevel": {
