--- a/src/MeuPonto.Web_App/wwwroot/appsettings.json
+++ b/src/MeuPonto.Web_App/wwwroot/appsettings.json
@@ -1,11 +1,24 @@
 {
   "AzureAd": {
-    "ClientId": "53f5c05d-7757-4a37-b6d2-3642b7a04202",
-    "Authority": "https://login.microsoftonline.com/mardsystemshotmail.onmicrosoft.com",
-    "ValidateAuthority": true
+    "ClientId": "015f536c-c6f6-4195-a983-d925194006d5",
+    "Authority": "https://meuponto.b2clogin.com/meuponto.onmicrosoft.com/B2C_1_SignUpAndSignIn",
+    "ValidateAuthority": false,
+    "RedirectUri": "app/authentication/login-callback",
+    "PostLogoutRedirectUri": "app/authentication/logout-callback"
   },
   "ServerApi": {
-    "BaseUrl": "api://53f5c05d-7757-4a37-b6d2-3642b7a04202",
-    "Scopes": "api://53f5c05d-7757-4a37-b6d2-3642b7a04202/access_as_user"
+    "BaseUrl": "https://meuponto.onmicrosoft.com/a5af114c-b644-4dcb-b137-261c1f4fba19",
+    "Scopes": "https://meuponto.onmicrosoft.com/a5af114c-b644-4dcb-b137-261c1f4fba19/access_as_user"
+  },
+  "AuthenticationPaths": {
+    "LoginPath": "app/authentication/login",
+    "LoginCallbackPath": "app/authentication/login-callback",
+    "LoginFailedPath": "app/authentication/login-failed",
+    "LogoutPath": "app/authentication/logout",
+    "LogoutCallbackPath": "app/authentication/logout-callback",
+    "LogoutFailedPath": "app/authentication/logout-failed",
+    "LogoutSucceededPath": "app/authentication/logged-out",
+    "ProfilePath": "app/authentication/profile",
+    "RegisterPath": "app/authentication/register"
   }
 }
